# project-1-web-application-design-group3-bugbusters

./: CODE_OF_CONDUCT.md  CONTRIBUTION.md  README.md  deploy.sh  dev.sh  docker-compose-release.yaml  docker-compose.yaml  ece444bulletin-firebase-adminsdk.json  server.py
.github/workflows/: flask-server.yml
flask-server/: .gitignore  Dockerfile  README.md  pyproject.toml
flask-server/deploy/: Dockerfile
flask-server/src/flask_server/: __init__.py  db.py  global_config.py
flask-server/src/flask_server/classes/: DataBaseClient.py  Event.py  EventImages.py  EventPackage.py  User.py  announcement.py  common.py  database_client.py  event.py  event_images.py  event_package.py  search_client.py  user_profile.py
flask-server/src/flask_server/services/: announcement_service.py  event_service.py  reporting_service.py  search_service.py  user_service.py
flask-server/src/flask_server/utilties/: dev_tool_upload_event.py
flask-server/test/unit/: test_announcement_service.py  test_app.py  test_class_announcement.py  test_class_event.py  test_class_user_profile.py  test_common.py  test_event_service.py  test_reporting_service.py  test_search_service.py  test_user_profile_service.py
frontend/: .gitignore  App.js  Dockerfile  README.md  app.json  config.js  config.prettier.json  package-lock.json  package.json
frontend/assets/: ScreenTemplate.js  exampleEventObject.json
frontend/deploy/: Dockerfile
frontend/src/components/: AnnouncementCard.js  EventCard.js  HeaderBar.js  HorizontalTextBuffer.js  PopUp.js  ProfileList.js  ProfilePicture.js
frontend/src/helpers/: API.js
(+13 files in other folders)
