[project]
name = "flask_server"
authors = [
    {name = "Benjamin Goel", email = "ben_goel@rogers.com"},
]
version = "1.0.0"
description = "The flask server for the ClubHub application."
dependencies = [
    "flask",
    "firebase_admin",
    "gitpython",
    "algoliasearch",
    "python-dotenv",

]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
