[project]
name = "flask_server"
authors = [
    {name = "Benjamin Goel", email = "ben_goel@rogers.com"},
]
version = "1.0.0"
description = "The flask server for the ClubHub application."
dependencies = [
    "flask",
    "firebase_admin",
    "algoliasearch",
    "python-dotenv",
    "flask-cors",
    "python-dateutil",
    "pytz",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "gunicorn",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
